Css bugfixes
fixed unneeded scrollbar on both axis

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -6,23 +6,29 @@
   flex-direction: row;
   justify-content: left;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+  max-height: 100%;
+
+  max-width: 100%;
 }
 
 .score-sheet {
   display: flex;
-  flex-direction: column;
+
+  flex-direction: center;
   justify-content: center;
   align-items: center;
+
   width: 20%;
-  height: 100vh;
+  height: 100%;
 
   border-right: 1px solid #45005a;
 }
+
 .timer {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 100vh;
+  height: 100%;
 }
